--- a/src/main/res/layout/activity_home.xml
+++ b/src/main/res/layout/activity_home.xml
@@ -7,7 +7,7 @@
     tools:context="profile.MainActivity">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/greetText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="HELLO WORLD"
